# griptape-nodes-library-storyboard

./: .gitignore  README.md  pyproject.toml
storyboard/: griptape_nodes_library.json  storyboard_image_node.py
