[project]
name = "storyboard"
version = "0.1.0"
description = "Griptape Nodes Storyboard Node"
authors = [
    {name = "Ian Massingham",email = "ian@griptape.ai"}
]
readme = "README.md"
requires-python = "~=3.12"
dependencies = [
    "griptape-nodes",
]

[tool.uv.sources]
griptape-nodes = { git = "https://github.com/griptape-ai/griptape-nodes", rev="latest"}
